examples/good/00-Comments.tms
//I'm a comment!

/* I'm also a
comment! */
void main() {
  return;
}