examples/bad/00-BadMain.tms
void main(int iShouldntBeHere) {
  return;
}